# ERP

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  README.md  README_EN.md  README_PT.md
.github/: dependabot.yml
contracts/: README.md  registry.json  schema-registry.json
docs/: ADR-001-http-interno-vs-grpc.md  API.md  API_PORTAL.md  ARQUITETURA.md  CHANGELOG.md  CONTRATOS.md  DADOS_LGPD.md  FASES.md  INTEGRACOES.md  OPERACOES.md  PADROES.md  POLIGLOTISMO.md  SEGURANCA.md  SERVICOS.md  SRE.md  VERSIONAMENTO_CONTRATOS.md
infra/: README.md  docker-compose.corporate-like.yml  docker-compose.yml
scripts/: README.md  build.sh  db.sh  down.sh  env.sh  logs.sh  test.sh  (+1 more)
service-api/service-python/platform-control/: Dockerfile  README.md  pyproject.toml
service-api/service-python/platform-control/app/: __init__.py  runtime.py  server.py
service-api/service-python/platform-control/app/config/: __init__.py  settings.py
service-api/service-python/platform-control/app/infrastructure/: __init__.py  external_http.py
service-api/service-python/platform-control/tests/unit/: test_server.py
service-api/service-python/support/: Dockerfile  README.md  pyproject.toml
service-api/service-python/support/app/: runtime.py  server.py
service-api/service-python/support/app/config/: settings.py
service-api/service-python/support/tests/unit/: test_server.py
service-api/service-rust/webhook-hub/: Cargo.toml  Dockerfile  README.md
service-api/service-rust/webhook-hub/src/: main.rs  server.rs
service-api/service-rust/webhook-hub/src/api/: mod.rs  router.rs  security.rs
service-api/service-rust/webhook-hub/src/config/: mod.rs
service-api/service-rust/webhook-hub/src/infrastructure/persistence/: mod.rs
service-api/service-rust/webhook-hub/src/telemetry/: mod.rs
(+1261 files in other folders)
