[project]
name = "platform-control"
version = "0.1.0"
description = "Platform control service for tenant capabilities and lifecycle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<0.29.0",
  "pytest>=8.4.0,<8.5.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
