[project]
name = "support"
version = "0.1.0"
description = "Support service for ERP case management and SLA operations"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "uvicorn>=0.47.0,<0.48.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<0.29.0",
  "pytest>=8.4.0,<8.5.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
